@@ -32,10 +32,10 @@ __nis_domain_of (const_nis_name name)
 {
   const_nis_name cptr = strchr (name, '.');
 
-  if (cptr++ == NULL)
+  if (cptr == NULL)
     return "";
 
-  if (*cptr == '\0')
+  if (*++cptr == '\0')
     return ".";
 
   return cptr;
